# BMC-database

./: .gitignore  README.md  Trackmywork(commit)  bmc.db  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  Pull to local  Pull to local.md  Push to repository.md
conda_envs/: BMC_database_313.yml  BMC_database_313_mac.yml
data/raw/: README.md  complex info.csv  complex_data.csv  domain info.csv  go info.csv  isoform info.csv  isoform_data.csv  prot-com info.csv  prot_complex_data.csv  prot_data.csv  prot_info.csv
docs/: README.md  documentation.ipynb
docs/documentation_files/: acknowledgments.ipynb  contact_information.ipynb  contributions.ipynb  controlled_vocabulary.ipynb  database_structure_db.ipynb  documentation_full_test.ipynb  examples.ipynb  installation.ipynb  introduction.ipynb  licence.ipynb  manual_data_addition.ipynb  microcomp_db.ipynb
docs/normalisation_thoughts/: Database start.xlsx  (+2 more)
environment/: BMC_database_313.yml
scripts/: BMC-database-dumpfile.sql  BMC-database-dumpfile.txt  BMC-database-skeleton.sql  BMC-database-sqlitesimulator.sqlite3  BMC-database-with data.sql  BMC-fromdumpandread.db  README.md  __init__.py  bmc.db  connect_sqlite.py  data.py  data_addition.py  data_to_csv.py  db-lp.py  db-lp.sqlite3  db-new.py  db.py  db.sqlite3  db_sql_withdata.sql  db_sqlalchemy-with data.py  db_sqlalchemy.py  db_sqlalchemy_withdata.py  db_to_delete.py  enums.py  extract_docstrings.py  file_and_data.py  microcomp_db.py  microcompdb.py  monolith.py  readfile.py  requirements.txt  restricted_vocab.py
tests/: conftest.py  test_protein_table.py
(+99 files in other folders)
